# rag-beginner

./: .env.example  .gitignore  README.md  TextSpliter.py  main.py  pyproject.toml  setup.py
.claude/: .superclaude-metadata.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README.md
scripts/: setup_exaone.py  setup_ollama.sh
src/: main.py
src/config/: api_config.py
src/core/: _init__.py
src/core/data_processing/: __init__.py  document_loader.py  embedding_generator.py  text_splitter.py  vector_store.py
src/core/evaluation/: __init__.py  benchmark.py  metrics.py  rag_evaluator.py
src/core/llm_providers/: __init__.py  base_provider.py  claude_provider.py  local_provider.py  openai_provider.py
src/core/retrieval/: __init__.py  base_retriever.py  hybrid_retriever.py  keyword_retriever.py  semantic_retriever.py
src/docs/: README.md
src/examples/: exaone_4.py
src/frameworks/: __init__.py
src/frameworks/langchain_examples/: __init__.py
src/frameworks/langchain_examples/advanced_rag/: __init__.py  agentic_rag.py  conversational_rag.py  hierarchical_rag.py  multi_query_rag.py
src/frameworks/langchain_examples/basic_rag/: __init__.py  document_chat.py  retrieval_chain.py  simple_qa.py
src/tutorials/01_getting_started/: hello_rag.py
src/utils/: TextSpliter.py  cossim.py
utils/: jax_flax_test.py
