[project]
name = "rag-beginner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.7",
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pypdf>=5.8.0",
    "requests>=2.32.4",
]
